# video-lora

./: .gitignore  .pr_agent.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-agent.yml
docs/: BENCHMARKS.md
src/video_lora/: __init__.py  __main__.py  cli.py  server.py
src/video_lora/core/: __init__.py  lora_loader.py  pipeline.py  scheduler.py
src/video_lora/models/: animatediff.py  cogvideo.py  ltx.py  wan.py
src/video_lora/utils/: __init__.py  export.py
tests/: __init__.py  test_models.py  test_smoke.py  test_vulkan.py
vulkan/: Makefile  README.md  build.zig
vulkan/python/: backend.py
vulkan/shaders/: attention.comp  attention.spv  conv2d.comp  conv2d.spv  elementwise.comp  elementwise.spv  group_norm.comp  group_norm.spv  lora_merge.comp  lora_merge.spv  silu.comp  silu.spv
vulkan/src/: main.zig  vk_api.h
vulkan/src/sd/: attention.zig  conv.zig  lora.zig
vulkan/src/vulkan/: buffer.zig  instance.zig  pipeline.zig  vk.zig
