[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-lora"
version = "0.1.0"
description = "Video generation with LoRA support — Wan2.2, LTX-Video, AnimateDiff, CogVideoX"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "diffusers>=0.32",
    "transformers>=4.46",
    "accelerate>=1.0",
    "safetensors>=0.4",
    "opencv-python>=4.9",
    "pillow>=10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]
wan = [
    "videox-fun@git+https://github.com/ali-vilab/VidGen.git",
]
ltx = [
    "ltx-video>=0.9",
]
animate = [
    "imageio[ffmpeg]>=2.34",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
